# nightforge

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  STANDARDS_CODE_ET_ARCHITECTURE.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy-api.yml  deploy-web.yml  desktop-release.yml
.husky/: commit-msg  pre-commit
agent/: .env.example  requirements.txt  run_agent.py
agent/nightforge_agent/: __init__.py  __main__.py  agent_singleton.py  claude_login.py  claude_runner.py  config.py  cursor_login.py  cursor_runner.py  cursor_usage_reader.py  git_manager.py  ideas_expander.py  oauth_credentials.py  oauth_setup.py  quota_reader.py  session_scanner.py  stream_actions.py  worker.py  ws_client.py
agent/scripts/: debug_oauth.py  debug_win_cred.py  nightforge_oauth_helper.py  test_oauth_automation.py
api/: .env.example  .gitignore  init_db.py  main.py  requirements.txt  run_dev.py
api/core/: config.py  database.py
api/enums/: __init__.py  ai_provider.py  machine_status.py  (+5 more)
docs/: ARCHITECTURE.md  CLAUDE_ACCOUNTS_PLAN.md  CURSOR_ACCOUNTS_PLAN.md  DEPLOYMENT.md  STANDARDS_CODE_ET_ARCHITECTURE.md  V2_PLAN.md
scripts/: generate-readme-logo.py
web/: .env.example  .gitignore  .prettierignore  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  prettier.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
web/src-tauri/windows/: hooks.nsh
(+135 files in other folders)
